# vpp

./: .clang-format  .clang-tidy  .git_commit_template.txt  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  .ycm_extra_conf.py  0001-api-python-object-model.patch  CLAUDE.md  FUZZER-README.txt  GEMINI.md  INFO.yaml  LICENSE  LICENSE_COMPLIANCE.md  MAINTAINERS  MAINTAINERS.yml  Makefile  Makefile.orig  NOTICE  README.DELETEME  README.delete  README.md  RELEASE.md  SECURITY.md  TEST.PATCH  TODO  WIREGUARD_TCP_IMPLEMENTATION.md  b  bootstrap.vpp  cbdma_bind.sh  configure  daqlist.sh  fdt.c  foo  foobar  groups  if_aq_pci.c  log.txt  maintainer.config  (+21 more)
docs/: Makefile  README  README.rst  about.rst  behavior_stability.rst  conf.py  docsignore  includes_renderer.py  index.rst  legacy_versions.rst  pyproject.toml  spelling_wordlist.txt  versions.rst
docs/_scripts/: Makefile  filter_api.py  filter_c.py  filter_h.py  includes_renderer.py  prepare-for-site.sh  publish-docs.sh  siphon-generate  siphon-process
docs/_templates/: versions.html
docs/aboutvpp/: developer.rst  extensible.rst  hoststack.rst  index.rst  networkstack.rst  performance.rst  scalar-vs-vector-packet-processing.rst  security.rst  security_advisories.rst  supported.rst  tsc_vulnerability_management_v2.rst
docs/archive/: index.rst
docs/cli-reference/: cli_features.rst  debug_telnet_cli.rst  index.rst
docs/configuration/: config_getting_started.rst  index.rst  reference.rst
docs/contiv/: K8s_Overview.md  MULTI_NIC_SETUP.md  NETWORKING.md  SECURITY.md  VPPTRACE.md  index.rst
docs/contributing/: gitreview.rst  index.rst  writingdocs.rst
docs/developer/: index.rst
docs/etc/: requirements.txt
docs/events/: index.rst
docs/featuresbyrelease/: index.rst  vpp16.06.rst  vpp16.09.rst  vpp17.01.rst  vpp17.04.rst  vpp17.07.rst  vpp17.10.rst  vpp18.01.rst  vpp18.04.rst  vpp18.07.rst  vpp18.10.rst  vpp1901.md  vpp1904.md  vpp1908.md
docs/gettingstarted/: index.rst
docs/guides/: index.rst
docs/interfacing/: index.rst
docs/links/: index.rst
docs/overview/: index.rst  supported.rst
docs/reference/: index.rst  jvpp.rst
docs/relatedprojects/: index.rst
docs/releasenotes/: v19.08.1.rst
docs/scripts/: Makefile  prepare-for-site.sh  publish-docs.sh  sphinx-make.sh
docs/siphon/: Makefile  filter_c.py
docs/troubleshooting/: index.rst  mem.rst  sanitizer.rst
docs/usecases/: 2_vpp.md  ConnectingVPC.rst  Routing.rst  acls.rst  automatingthedeployment.rst  containerCreation.rst  containerSetup.rst  container_test.md  container_test.rst  containers.rst  contivVPP.rst  hgw.md  home_gateway.rst  homegateway.rst  ikev2.rst  index.rst  networksim.md  networksim.rst  trafficgen.md  trafficgen.rst  uc_vSwitchvRouter.rst  vmxnet3.rst  vpp_init_sswan_resp.md  vpp_resp_sswan_init.md  vppcloud.rst  vppinaws.rst  vppinazure.rst  webapp.rst
docs/whatisvpp/: extensible.rst  index.rst  networkstack.rst  performance.rst  scalar-vs-vector-packet-processing.rst  supported.rst
extras/apps/: Makefile.am  bootstrap  configure.ac
extras/gmod/: Makefile.am  configure.ac
extras/japi/: CMakeLists.txt  Makefile.am  configure.ac
g2/: Makefile.am  clib.c  configure.ac  g2version.c  props.c  props.h
mbedtls/: Makefile.am  configure.ac
perftool/: Makefile.am  c2cpel.c  configure.ac  cpel_util.c  cpel_util.h  cpelatency.c  cpeldump.c  delsvec.c  linreg.c  props.c
plugins/: Makefile.am  configure.ac
plugins/acl-plugin/: Makefile.am  configure.ac
plugins/flowperpkt-plugin/: Makefile.am  README.md  flowperpkt.am  flowperpkt_plugin_doc.md
plugins/ila-plugin/: Makefile.am  ila.am
plugins/ioam-plugin/: Makefile.am  configure.ac
plugins/ioam-pot/: Makefile.am  configure.ac
plugins/lb-plugin/: Makefile.am  README.md  configure.ac  lb_plugin_doc.md
plugins/netcp-plugin/: Makefile.am  configure.ac
plugins/sample-plugin/: Makefile.am  configure.ac
plugins/sixrd-plugin/: Makefile.am  configure.ac  sixrd.am
plugins/snat/: Makefile.am  configure.ac
plugins/snat-plugin/: Makefile.am  configure.ac  setup.py  snat.am
plugins/vcgn-plugin/: Makefile.am  configure.ac
src/: .gitignore  CMakeLists.txt  Makefile.am  app  apps.am  configure.ac  example  fail_the_checkstyle.c  g2.am  ln2mv  oam  perftool.am  scripts  scripts.am  stats  suffix-rules.mk  svm  svm.am  test  uri.am  vapi.am  vat  vat.am  vcl.am  vlib  vlib-api.am  vlib.am  vlibapi  vlibmemory  vlibsocket  vnet  vnet.am  vpp-api  vpp-api-java.am  vpp-api-python.am  vpp-api-test.am  vpp-api.am  vpp.am  vppapigen.am  vppinfra  (+1 more)
src/app/: api  app  oam  stats  vnet
src/apps/: tcp_echo.c
src/cmake/: CMakeLists.txt  VPPConfig.cmake  api.cmake  api.cmake.orig  ccache.cmake  cpu.cmake  crypto_engines.cmake  deb.cmake  drivers.cmake  exec.cmake  extdeps.cmake  library.cmake  memfd.cmake  message.cmake  misc.cmake  pack.cmake  (+2 more)
test/: .#template_classifier.py  .gitignore  Makefile  README  README.md  README.txt  README_VIRTIO_TESTS.md  asfframework.py  bfd.py  bfd_v2.py  cdp.py  cli_commands.py  config.py  cpu_config.py  custom_exceptions.py  debug.py  debug_internal.py  decorators.py  discover_tests.py  existing_vpp.py  framework.py  hook.py  host_interface.py  ipfix.py  jvpp_connection.py  lisp.py  log.py  main.py  nat_util.py  pyproject.toml  remote_test.py  requirements-2.txt  requirements-3.txt  requirements.txt  results.patch  run.py  run_tests.py  sanity_import_vpp_papi.py  sanity_import_vpp_pom.py  sanity_run_vpp.py  (+361 more)
test32/: Makefile.am  configure.ac  vppinfra
vlib/: Makefile.am  Makefile.in  configure  configure.ac  dir.dox
vlib-api/: Makefile.am  Makefile.in  configure  configure.ac
vnet/: Makefile.am  Makefile.in  configure  configure.ac
vpp/: Makefile.am  Makefile.in  configure  configure.ac
vpp-api/: Makefile.am  configure.ac
vpp-api-test/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
vppapigen/: Makefile.am  Makefile.in  configure  configure.ac  gram.y  lex.c  lex.h  node.c  node.h  pyvppapigen.py
vppinfra/: Make.defs  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  dir.dox  unix_error.def
(+11932 files in other folders)
